# AgenticAI-RAG

./: .gitignore  README.md  main.py  pyproject.toml
backend/: agent.py  config.py  main.py  requirements.txt  vectorstore.py
frontend/: app.py
