[project]
name = "agentbot"
version = "0.1.0"
description = "Medical AI Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pinecone>=7.3.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "unstructured>=0.23.0",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]
